k8s/prod/NetflixFrontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
  labels:
    app: netflix-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
        - name: server
          image: ofekhalabi/netflix-frontend:v1.0.19
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
            livenessProbe:
              initialDelaySeconds: 10
              httpGet:
                path: "/"
                port: 80
            readinessProbe:
              initialDelaySeconds: 10
              httpGet:
                path: "/"
                port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-service
spec:
  selector:
    app: netflix-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  template:
    spec:
      containers:
        - image: ofekhalabi/netflix-frontend:v1.0.19
