k8s/prod/NetflixFrontend/IngressNginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ofekh-netflix.prod.devops-int-college.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: netflix-frontend-service
              port:
                number: 3000
